--- a/style/style.css
+++ b/style/style.css
@@ -83,6 +83,9 @@ img {
       overflow: hidden;
 
 }
+textarea {
+      resize: none;
+}
 
 /* =======CONTAINER====== */
 
@@ -941,11 +944,112 @@ img {
       padding: 15px;
 
       background-color: #fff;
+      padding: 40px;
+}
+.form {
+      margin-left: auto;
+      margin-right: auto;
+
+}
+.field-label {
+      margin-left: 0px;
+      margin-right: auto;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 14px;
+
+      /* border-radius: 4px; */
+      
+
+      letter-spacing: 0.01em;
+
+      color: #757575;
+
+}
+.field-input {
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+}
+.form-field {
+      margin-top: 0;
+      display: flex;
+      flex-direction: column;
+      
+}
+.form-field:not(:last-child) {
+      margin-bottom: 10px;
 }
 
+.form textarea {
+ padding: 12px 16px;
+ width: 448px;
+ height: 120px;
+}
+.form-field textarea::placeholder {
+      color: rgba(117, 117, 117, 0.5);
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 0.01em;
+}
+
+.btn-close {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      background-color: var(--primary-white-color);
+      border: 1px solid rgba(0, 0, 0, 0.1);
 
 
+      
+}
+.btn-close-icon {
+      fill: #000000;
+     
+}
+.btn-close:hover .btn-close-icon,
+.btn-close:focus .btn-close-icon {
+      fill: var(--accent-color);
+      transition: fill var(--timing-function) var(--transition-duration250);
+}
+.modal p {
+      margin-bottom: 12px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 23px;
+      text-align: center;
+      letter-spacing: 0.03em;
 
+}
+.form-field.box {
+      margin-top: 20px;
+      margin-bottom: 30px;
+}
+.field-label.policy {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 24px;
+      letter-spacing: 0.03em;
+
+}
+.contract {
+      text-decoration: underline;
+      color: var(--accent-color);
+}
 /* Устанавливает рамку */
 border: 2px solid #2196F3;
 
