--- a/style/style.css
+++ b/style/style.css
@@ -860,7 +860,7 @@ textarea {
       line-height: 20px;
       color: rgba(255, 255, 255, 0.6);
 }
-.btn-subscription {
+.btn-subscription-link {
       display: inline-flex;
       align-content: center;
 
