--- a/style/style.css
+++ b/style/style.css
@@ -860,6 +860,11 @@ textarea {
       line-height: 20px;
       color: rgba(255, 255, 255, 0.6);
 }
+.form-email::placeholder {
+      font-size: 16px;
+      line-height: 20px;
+      color: rgba(255, 255, 255, 0.6);
+}
 .btn-subscription-link {
       display: inline-flex;
       align-content: center;
@@ -891,7 +896,7 @@ textarea {
       
       
 }
-.footer-form input::placeholder {
+.form-email::placeholder {
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
@@ -899,6 +904,7 @@ textarea {
       line-height: 20px;
       letter-spacing: 0.03em;
 }
+
 
 /* ================= PORTFOLIO ========== */
 /* ==================== MAIN-NAV=============== */
@@ -1051,7 +1057,6 @@ textarea {
 
       min-height: 300px;
       min-width: 300px;
-      padding: 15px;
 
       background-color: #fff;
       padding: 40px;
@@ -1064,32 +1069,48 @@ textarea {
 }
 
 .field-label {
+      
       margin-left: 0px;
       margin-right: auto;
+      margin-bottom: 4px;
+      
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 12px;
       line-height: 14px;
 
-      /* border-radius: 4px; */
+      
 
 
       letter-spacing: 0.01em;
 
       color: #757575;
+      transition: color var(--transition-duration250) var(--timing-function);
 
 }
 
 .field-input {
+      
+      
       border: 1px solid rgba(33, 33, 33, 0.2);
       border-radius: 4px;
+      padding-left: 42px;
+      box-sizing: border-box;
+      font-size: 14px;
+      
+      width: 448px;
+      height: 40px;
+     
 }
 
+
 .form-field {
+      position: relative;
       margin-top: 0;
       display: flex;
       flex-direction: column;
+      
 
 }
 
@@ -1097,10 +1118,21 @@ textarea {
       margin-bottom: 10px;
 }
 
-.form textarea {
+.field-input.textarea {
       padding: 12px 16px;
       width: 448px;
       height: 120px;
+}
+
+.btn-form-icon {
+      position: absolute;
+      top: 28px;
+      left: 12px;
+      
+}
+.form-field:focus-within .btn-form-icon {
+      fill: var(--accent-color);
+      transition: color var(--timing-function) var(--transition-duration250);
 }
 
 .form-field textarea::placeholder {
@@ -1111,6 +1143,17 @@ textarea {
       font-size: 12px;
       line-height: 14px;
       letter-spacing: 0.01em;
+}
+/* .form-field:focus-within .field-label {
+      
+      color: var(--accent-color);
+      transition: color var(--timing-function) var(--transition-duration250);
+} */
+
+.field-input:focus{
+      outline: none;
+      border: 1px solid var(--accent-color);
+      transition: border var(--timing-function) var(--transition-duration250);
 }
 
 .btn-close {
@@ -1172,7 +1215,33 @@ textarea {
       text-decoration: underline;
       color: var(--accent-color);
 }
+.btn-submit {
+      width: 200px;
+      height: 50px;
+      margin-left: 20px;
 
+      color: var(--primary-white-color);
+      background: var(--accent-color);
+
+      border-radius: 4px;
+      border: inherit;
+
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 30px;
+      
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+
+}
+.btn-submit:hover,
+.btn-submit:focus {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      transition: box-shadow var(--transition-duration250) var(--timing-function);
+}
 /* Устанавливает рамку */
 border: 2px solid #2196F3;
 
