--- a/style/style.css
+++ b/style/style.css
@@ -823,13 +823,15 @@ textarea {
       fill: var(--primary-white-color);
 
 }
+
 .container-footer-form {
       margin-top: 72px;
       margin-left: 94px;
-      
-      
-      
+
+
+
 }
+
 .subscription-title {
       margin-top: 0;
       margin-bottom: 20px;
@@ -843,6 +845,7 @@ textarea {
 
       color: #FFFFFF;
 }
+
 .form-email {
       width: 358px;
       height: 50px;
@@ -855,16 +858,18 @@ textarea {
       padding-bottom: 15px;
       padding-left: 16px;
 
-      
+
       font-size: 16px;
       line-height: 20px;
       color: rgba(255, 255, 255, 0.6);
 }
+
 .form-email::placeholder {
       font-size: 16px;
       line-height: 20px;
       color: rgba(255, 255, 255, 0.6);
 }
+
 .btn-subscription-link {
       display: inline-flex;
       align-content: center;
@@ -872,10 +877,10 @@ textarea {
       width: 200px;
       height: 50px;
       margin-left: 20px;
-      
+
 
       background: var(--accent-color);
-      
+
       border-radius: 4px;
       border: inherit;
 
@@ -887,15 +892,17 @@ textarea {
       color: var(--primary-white-color);
       justify-content: center;
       align-items: center;
-      
-      
+
+
 }
+
 .subscription-icon {
       fill: var(--primary-white-color);
       margin-left: 10px;
-      
-      
+
+
 }
+
 .form-email::placeholder {
       font-family: Roboto;
       font-style: normal;
@@ -1063,24 +1070,24 @@ textarea {
 }
 
 .form {
-      margin-left: auto;
-      margin-right: auto;
+      display: flex;
+      flex-direction: column;
 
 }
 
 .field-label {
-      
+
       margin-left: 0px;
       margin-right: auto;
       margin-bottom: 4px;
-      
+
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 12px;
       line-height: 14px;
 
-      
+
 
 
       letter-spacing: 0.01em;
@@ -1091,28 +1098,20 @@ textarea {
 }
 
 .field-input {
-      
-      
+
+
       border: 1px solid rgba(33, 33, 33, 0.2);
       border-radius: 4px;
       padding-left: 42px;
       box-sizing: border-box;
       font-size: 14px;
-      
-      width: 448px;
+
+      width: 100%;
       height: 40px;
-     
-}
-
-
-.form-field {
-      position: relative;
-      margin-top: 0;
-      display: flex;
-      flex-direction: column;
-      
 
 }
+
+
 
 .form-field:not(:last-child) {
       margin-bottom: 10px;
@@ -1120,17 +1119,23 @@ textarea {
 
 .field-input.textarea {
       padding: 12px 16px;
-      width: 448px;
+      width: 100%;
       height: 120px;
+}
+.wrapper-form-filed {
+      position: relative;
+      display: block;
 }
 
 .btn-form-icon {
       position: absolute;
-      top: 28px;
+      top: 50%;
       left: 12px;
-      
+      transform: translateY(-50%);
+
 }
-.form-field:focus-within .btn-form-icon {
+
+.field-input:focus+ .btn-form-icon {
       fill: var(--accent-color);
       transition: color var(--timing-function) var(--transition-duration250);
 }
@@ -1144,13 +1149,14 @@ textarea {
       line-height: 14px;
       letter-spacing: 0.01em;
 }
+
 /* .form-field:focus-within .field-label {
       
       color: var(--accent-color);
       transition: color var(--timing-function) var(--transition-duration250);
 } */
 
-.field-input:focus{
+.field-input:focus {
       outline: none;
       border: 1px solid var(--accent-color);
       transition: border var(--timing-function) var(--transition-duration250);
@@ -1215,6 +1221,7 @@ textarea {
       text-decoration: underline;
       color: var(--accent-color);
 }
+
 .btn-submit {
       width: 200px;
       height: 50px;
@@ -1222,6 +1229,7 @@ textarea {
 
       color: var(--primary-white-color);
       background: var(--accent-color);
+      outline: none;
 
       border-radius: 4px;
       border: inherit;
@@ -1231,17 +1239,20 @@ textarea {
       font-weight: bold;
       font-size: 16px;
       line-height: 30px;
-      
+
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      
 
 }
+
 .btn-submit:hover,
 .btn-submit:focus {
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
       transition: box-shadow var(--transition-duration250) var(--timing-function);
 }
+
 /* Устанавливает рамку */
 border: 2px solid #2196F3;
 
