--- a/style/style.css
+++ b/style/style.css
@@ -70,23 +70,17 @@ img {
 }
 
 .visually-hidden {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      margin: -1px;
-      border: 0;
-      padding: 0;
-
-      white-space: nowrap;
-      clip-path: inset(100%);
-      clip: rect(0 0 0 0);
+      position: absolute !important;
+      clip: rect(1px 1px 1px 1px);
+      /* IE6, IE7 */
+      clip: rect(1px, 1px, 1px, 1px);
+      padding: 0 !important;
+      border: 0 !important;
+      height: 1px !important;
+      width: 1px !important;
       overflow: hidden;
-
 }
 
-textarea {
-      resize: none;
-}
 
 /* =======CONTAINER====== */
 
@@ -1076,6 +1070,9 @@ textarea {
 }
 
 .field-label {
+      display: flex;
+      
+      
 
       margin-left: 0px;
       margin-right: auto;
@@ -1086,14 +1083,9 @@ textarea {
       font-weight: normal;
       font-size: 12px;
       line-height: 14px;
-
-
-
-
       letter-spacing: 0.01em;
-
       color: #757575;
-      transition: color var(--transition-duration250) var(--timing-function);
+      
 
 }
 
@@ -1117,11 +1109,7 @@ textarea {
       margin-bottom: 10px;
 }
 
-.field-input.textarea {
-      padding: 12px 16px;
-      width: 100%;
-      height: 120px;
-}
+
 .wrapper-form-filed {
       position: relative;
       display: block;
@@ -1132,6 +1120,8 @@ textarea {
       top: 50%;
       left: 12px;
       transform: translateY(-50%);
+      display: block;
+      
 
 }
 
@@ -1140,7 +1130,18 @@ textarea {
       transition: color var(--timing-function) var(--transition-duration250);
 }
 
-.form-field textarea::placeholder {
+.modal-form-message {
+      padding: 12px 16px;
+      width: 100%;
+      height: 120px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      font-size: 14px;
+      resize: none;
+      outline: none;
+}
+
+.modal-form-message::placeholder {
       color: rgba(117, 117, 117, 0.5);
       font-family: Roboto;
       font-style: normal;
@@ -1148,18 +1149,72 @@ textarea {
       font-size: 12px;
       line-height: 14px;
       letter-spacing: 0.01em;
+
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 0.01em;
 }
 
-/* .form-field:focus-within .field-label {
-      
-      color: var(--accent-color);
-      transition: color var(--timing-function) var(--transition-duration250);
-} */
 
-.field-input:focus {
+.field-input:focus,
+.modal-form-message:focus {
       outline: none;
       border: 1px solid var(--accent-color);
       transition: border var(--timing-function) var(--transition-duration250);
+}
+.field-label-policy {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 24px;
+      
+
+      letter-spacing: 0.03em;
+
+      color: #757575;
+}
+
+.field-label-policy::before {
+      content: " ";
+      display: inline-block;
+      
+      width: 16px;
+      height: 15px;
+      border: 1px solid #212121;
+      border-radius: 2px;
+      
+      margin-right: 7px;
+
+}
+.form-field-policy {
+      margin-top: 20px;
+      margin-bottom: 30px;
+}
+.input-policy:checked+.field-label-policy::before {
+      border: 1px solid var(--accent-color);
+      background-color: var(--accent-color);
+      background-repeat: no-repeat;
+      background-image: url("../image/cheked-icon.svg");
+      transition: var(--accent-color) var(--timing-function) var(--transition-duration250),
+      background-image var(--timing-function) var(--transition-duration250);
+}
+.contract {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 24px;
+      
+
+      letter-spacing: 0.03em;
+      text-decoration: underline;
+     
+
+      color: #2196F3;
 }
 
 .btn-close {
@@ -1174,6 +1229,7 @@ textarea {
       border-radius: 50%;
       background-color: var(--primary-white-color);
       border: 1px solid rgba(0, 0, 0, 0.1);
+      cursor: pointer;
 
 
 
@@ -1191,6 +1247,7 @@ textarea {
 }
 
 .modal p {
+      margin-top: 0;
       margin-bottom: 12px;
       font-family: Roboto;
       font-style: normal;
@@ -1217,15 +1274,12 @@ textarea {
 
 }
 
-.contract {
-      text-decoration: underline;
-      color: var(--accent-color);
-}
+
 
 .btn-submit {
       width: 200px;
       height: 50px;
-      margin-left: 20px;
+      margin: 0;
 
       color: var(--primary-white-color);
       background: var(--accent-color);
@@ -1240,8 +1294,8 @@ textarea {
       font-size: 16px;
       line-height: 30px;
 
-      justify-content: center;
-      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
       cursor: pointer;
       
 
